Add some prototypical code to sketch the idea out

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,11 @@
     "require": {},
     "require-dev": {
         "behat/behat": "~2.5"
+    },
+    "extras": {
+        "commands": [
+            "doctor diagnose",
+            "doctor checks"
+        ]
     }
 }
