--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         },
         "commands": [
             "doctor check",
-            "doctor checks"
+            "doctor list"
         ]
     }
 }
