Add a check for greater than 80 active plugins

--- a/doctor.yml
+++ b/doctor.yml
@@ -19,6 +19,8 @@ cron-duplicates:
   class: runcommand\Doctor\Checks\Cron_Duplicates
 cron-count:
   class: runcommand\Doctor\Checks\Cron_Count
+plugin-active-count:
+  class: runcommand\Doctor\Checks\Plugin_Active_Count
 plugin-deactivated:
   class: runcommand\Doctor\Checks\Plugin_Deactivated
 plugin-update:
