--- a/doctor.yml
+++ b/doctor.yml
@@ -19,6 +19,10 @@ cron-duplicates:
   class: runcommand\Doctor\Checks\Cron_Duplicates
 cron-count:
   class: runcommand\Doctor\Checks\Cron_Count
+file-eval:
+  class: runcommand\Doctor\Checks\File
+  options:
+    regex: eval\(.*base64_decode\(.*
 plugin-active-count:
   class: runcommand\Doctor\Checks\Plugin_Active_Count
 plugin-deactivated:
