Add generic `Option_Value` check; ensure `blog_public=1` by default

--- a/doctor.yml
+++ b/doctor.yml
@@ -23,6 +23,11 @@ file-eval:
   check: File_Contents
   options:
     regex: eval\(.*base64_decode\(.*
+option-blog-public:
+  check: Option_Value
+  options:
+    option: blog_public
+    expected_value: 1
 plugin-active-count:
   check: Plugin_Active_Count
 plugin-deactivated:
