Use "type": "wp-cli-package" to designate this as a WP-CLI package
See https://github.com/wp-cli/wp-cli/issues/2567

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "runcommand/doctor",
     "description": "Diagnose problems within WordPress by running a series of checks for symptoms.",
+    "type": "wp-cli-package",
     "homepage": "https://runcommand.io/wp/doctor/",
     "license": "MIT",
     "authors": [
