Drop `expected_` from value assertions
Expected is expected.

--- a/doctor.yml
+++ b/doctor.yml
@@ -27,7 +27,7 @@ option-blog-public:
   check: Option_Value
   options:
     option: blog_public
-    expected_value: 1
+    value: 1
 plugin-active-count:
   check: Plugin_Active_Count
 plugin-deactivated:
