--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     "autoload": {
         "files": [ "command.php" ]
     },
-    "require": {},
+    "require": {
+        "wp-cli/wp-cli": "*"
+    },
     "require-dev": {
         "behat/behat": "~2.5"
     },
