--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: false
+dist: trusty
 
 language: php
 
@@ -29,6 +30,8 @@ matrix:
       env: WP_VERSION=latest
     - php: 5.6
       env: WP_VERSION=latest
+    - php: 5.6
+      env: WP_VERSION=3.7.11
     - php: 5.6
       env: WP_VERSION=trunk
     - php: 5.3
