--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,24 @@
         "files": [ "command.php" ]
     },
     "require": {
-        "wp-cli/wp-cli": "*"
+        "wp-cli/wp-cli": "2"
     },
     "require-dev": {
-        "behat/behat": "~2.5"
+        "behat/behat": "~2.5",
+        "wp-cli/wp-cli-tests": "2"
+    },
+    "scripts": {
+      "lint": "run-linter-tests",
+      "phpcs": "run-phpcs-tests",
+      "phpunit": "run-php-unit-tests",
+      "behat": "run-behat-tests",
+      "prepare-tests": "install-package-tests",
+      "test": [
+          "@lint",
+          "@phpcs",
+          "@phpunit",
+          "@behat"
+      ]
     },
     "extra": {
         "branch-alias": {
