--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "files": [ "command.php" ]
     },
     "require": {
-        "wp-cli/wp-cli": "2"
+        "wp-cli/wp-cli": "2",
+        "wp-cli/entity-command": "2",
+        "wp-cli/extension-command": "2"
     },
     "require-dev": {
         "behat/behat": "~2.5",
