--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,10 @@
     "require": {
         "wp-cli/wp-cli": "2",
         "wp-cli/entity-command": "2",
-        "wp-cli/extension-command": "2"
+        "wp-cli/extension-command": "2",
+        "wp-cli/core-command": "1.0.12",
+        "wp-cli/cron-command": "2",
+        "wp-cli/language-command": "2"
     },
     "require-dev": {
         "behat/behat": "~2.5",
