--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,8 @@ jobs:
             php -r "copy('https://raw.githubusercontent.com/composer/getcomposer.org/master/web/installer', 'composer-setup.php');" && \
             php composer-setup.php && \
             php -r "unlink('composer-setup.php');" && \
-            mv composer.phar /usr/local/bin/composer
+            mv composer.phar /usr/local/bin/composer &&
+            composer self-update
       - restore_cache:
           keys:
             - composer-v1-{{ checksum "composer.json" }}
