Add PHP zip extension to PHP 5.4 image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,9 @@ jobs:
             echo 'export PATH="$CIRCLE_WORKING_DIRECTORY/vendor/bin:$PATH"' >> $BASH_ENV
             echo -e "memory_limit = 2048M" | tee /usr/local/etc/php/php.ini > /dev/null
       - run:
+          name: "Install PHP zip extension"
+          command: sudo apt-get install -y php-zip
+      - run:
           name: "Install git"
           command: sudo apt-get install -y git
       - run:
