--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
-sudo: false
-dist: trusty
+os: linux
+dist: xenial
 
 language: php
-php: 7.2
+php: 7.4
+
+services:
+  - mysql
 
 notifications:
   email:
@@ -51,6 +54,12 @@ jobs:
         - composer phpcs
       env: BUILD=sniff
     - stage: test
+      php: 7.4
+      env: WP_VERSION=latest
+    - stage: test
+      php: 7.3
+      env: WP_VERSION=latest
+    - stage: test
       php: 7.2
       env: WP_VERSION=latest
     - stage: test
@@ -64,7 +73,8 @@ jobs:
       env: WP_VERSION=latest
     - stage: test
       php: 5.6
-      env: WP_VERSION=trunk
+      env: WP_VERSION=3.7.11
+      dist: trusty
     - stage: test
-      php: 5.4
-      env: WP_VERSION=5.1.1
+      php: 5.6
+      env: WP_VERSION=trunk
