--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,10 @@ workflows:
   main:
     jobs:
       - tests:
+          php: "7.4"
+      - tests:
+          php: "7.3"
+      - tests:
           php: "7.2"
       - tests:
           php: "7.1"
@@ -14,7 +18,6 @@ workflows:
       - tests:
           php: "5.6"
           wpVersion: "trunk"
-      - test54
 
 jobs:
   tests:
@@ -42,51 +45,6 @@ jobs:
             sudo docker-php-ext-install mysqli
             echo 'export PATH="$CIRCLE_WORKING_DIRECTORY/vendor/bin:$PATH"' >> $BASH_ENV
             echo -e "memory_limit = 2048M" | sudo tee /usr/local/etc/php/php.ini > /dev/null
-      - restore_cache:
-          keys:
-            - composer-v1-{{ checksum "composer.json" }}
-      - run:
-          name: "Setup with Composer"
-          command: |
-            composer validate
-            composer install
-            composer prepare-tests
-            mysql -uroot -e "UPDATE mysql.user SET host = '%' WHERE user = 'wp_cli_test'"
-            mysql -uroot -e "UPDATE mysql.db SET host = '%' WHERE user = 'wp_cli_test'"
-            mysql -uroot -e "FLUSH PRIVILEGES"
-      - save_cache:
-          key: composer-v1-{{ checksum "composer.json" }}
-          paths:
-            - vendor
-      - run:
-          name: "Run Tests"
-          command: |
-            composer phpunit
-            composer behat || composer behat-rerun
-
-  test54:
-    parameters:
-      wpVersion:
-        type: string
-        default: "5.1"
-    docker:
-      - image: php:5.4
-      - image: circleci/mysql:5.6
-    environment:
-      MYSQL_HOST: 127.0.0.1
-      MYSQL_USER: root
-      MYSQL_ALLOW_EMPTY_PASSWORD: true
-      WP_CLI_BIN_DIR: "/home/circleci/project/vendor/bin"
-      WP_VERSION: << parameters.wpVersion >>
-    steps:
-      - checkout
-      - run:
-          name: "Prep for testing with PHP v5.4. "
-          command: |
-            apt-get update && sudo apt-get install -y mysql-client
-            docker-php-ext-install mysqli
-            echo 'export PATH="$CIRCLE_WORKING_DIRECTORY/vendor/bin:$PATH"' >> $BASH_ENV
-            echo -e "memory_limit = 2048M" | tee /usr/local/etc/php/php.ini > /dev/null
       - restore_cache:
           keys:
             - composer-v1-{{ checksum "composer.json" }}
