--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -28,7 +28,10 @@
 	#############################################################################
 	-->
 
-	<rule ref="WP_CLI_CS"/>
+	<rule ref="WP_CLI_CS">
+		<!-- Ignoring namespace prefix for now, package should be ported to PSR-4. -->
+		<exclude name="WordPress.NamingConventions.PrefixAllGlobals.NonPrefixedNamespaceFound"/>
+	</rule>
 
 	<!--
 	#############################################################################
