--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       - run:
           name: "Prep for testing with PHP v<< parameters.php >>."
           command: |
-            sudo apt-get update && sudo apt-get install -y mysql-client
+            sudo apt-get update && sudo apt-get install -y default-mysql-client
             sudo docker-php-ext-install mysqli
             echo 'export PATH="$CIRCLE_WORKING_DIRECTORY/vendor/bin:$PATH"' >> $BASH_ENV
             echo -e "memory_limit = 2048M" | sudo tee /usr/local/etc/php/php.ini > /dev/null
