--- a/.travis.yml
+++ b/.travis.yml
@@ -48,11 +48,6 @@ script:
 
 jobs:
   include:
-    - stage: sniff
-      script:
-        - composer lint
-        - composer phpcs
-      env: BUILD=sniff
     - stage: test
       php: 7.4
       env: WP_VERSION=latest
@@ -71,6 +66,10 @@ jobs:
     - stage: test
       php: 5.6
       env: WP_VERSION=latest
+    - stage: test
+      php: 5.6
+      env: WP_VERSION=3.7.11
+      dist: trusty
     - stage: test
       php: 5.6
       env: WP_VERSION=trunk
