--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
         "wp-cli/wp-cli-tests": "^2.1"
     },
     "config": {
-        "platform": {
-            "php": "5.6"
-        },
         "process-timeout": 7200,
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "extra": {
         "branch-alias": {
@@ -52,8 +52,11 @@
         }
     },
     "autoload": {
+        "psr-4": {
+            "WP_CLI\\Doctor\\": "src/"
+        },
         "files": [
-            "command.php"
+            "doctor-command.php"
         ]
     },
     "minimum-stability": "dev",
